# gl_frame

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  CMakePresets.json
include/lib/common/: config_file.h  dump_helper.h  exception.h  log.h  posix_compat.h  time_marker.h  util.h
include/lib/gl_wrap/: bindable.h  error.h  index.h  program.h  shader.h  vertex.h
include/lib/glfw_wrap/: keyboard.h  window.h
include/prj_exec1/: app.h  signal_handle.h
include/sandbox/: app.h
shader/: fragment_shader.fs  fragment_shader2.fs  vertex_shader.vs
src/: CMakeLists.txt
src/lib/: CMakeLists.txt
src/lib/common/: CMakeLists.txt
src/lib/common/include/common/: config_file.h  dump_helper.h  error.h  exception.h  image_loader.h  log_formatter.h  macro.h  time_marker.h  util.h
src/lib/common/src/: config_file.cpp  dump_helper.cpp  error.cpp  exception.cpp  image_loader.cpp  log.cpp  log_formatter.cpp  time_marker.cpp  util.cpp
src/lib/gl_wrap/: CMakeLists.txt
src/lib/gl_wrap/include/gl_wrap/: bindable.h  error.h  error.hpp  index.h  program.h  shader.h  texture.h  vertex.h
src/lib/gl_wrap/src/: error.cpp  incdex.cpp  index.cpp  program.cpp  shader.cpp  texture.cpp  vertex.cpp
src/lib/glfw_wrap/: CMakeLists.txt
src/lib/glfw_wrap/include/glfw_wrap/: context.h  keyboard.h  window.h
src/lib/glfw_wrap/src/: context.cpp  keyboard.cpp  window.cpp
src/prj_exec1/: CMakeLists.txt
src/prj_exec1/src/: app.cpp  main.cpp  signal_handle.cpp
src/sandbox/: CMakeLists.txt
src/sandbox/include/sandbox/: app.h
src/sandbox/src/: app.cpp  main.cpp  signal_handle.cpp
src/shader/: fragment_shader.fs
test/: CMakeLists.txt
test/src/: main.cpp
